src/test/resources/invalid_tests/InvalidInputShape.cnna
architecture InvalidInputShape(inputs=10, classes=2){
    def input Q(-oo:+oo)^{C:inputs} in[2]
    def output Q(0:1)^{C:classes} out[2]

    in ->
    FullyConnected(units=64) ->
    Tanh() ->
    FullyConnected(units=classes) ->
    Softmax() ->
    out
}